Fixed CSS rule that might cause image stretching

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,6 @@ a:visited { color: #a0a; }
 .post figure > img {
   width: auto;
   height: auto;
-  max-height: 100%;
   max-width: 100%;
 }
 
